Revert "* Zeppelin 0.6.x Support (only)"
This reverts commit 2bb7e4ac07513816f5ee378e157178b20cf0b5fb.

Change-Id: I34002d3078b231b36ca62323a4ba3f22fa9aa319